Add uniq tests