@@ -8,7 +8,6 @@ import static sg.edu.nus.comp.cs4218.impl.util.StringUtils.STRING_STDIN_FLAG;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Deque;
@@ -27,7 +26,7 @@ import sg.edu.nus.comp.cs4218.impl.app.RmApplication;
 @Disabled
 public class RmApplicationTest {
     public static final String TEMP = "temp";
-    public static final Path TEMP_PATH = Paths.get(EnvironmentUtil.currentDirectory, TEMP);
+    public static final Path TEMP_PATH = Path.of(EnvironmentUtil.currentDirectory, TEMP);
     public static Deque<Path> files = new ArrayDeque<>();
 
     @BeforeAll
@@ -71,7 +70,7 @@ public class RmApplicationTest {
             args.add(STRING_STDIN_FLAG + flag);
         }
         for (String file : files) {
-            args.add(Paths.get(TEMP, file).toString());
+            args.add(Path.of(TEMP, file).toString());
         }
         return args.toArray(new String[0]);
     }
